# battlebots

./: .gitignore  Cargo.toml  README.md  log.txt  run.sh
render_utils/: Cargo.toml
render_utils/src/: lib.rs
src/: external_robo.rs  lib.rs  main.rs  render.rs  robo.rs  robo_controller.rs  std_robo.rs  threading.rs  world.rs
src/ctl/: mod.rs
src/ctl/user/: mod.rs  process.rs
support/: Cargo.toml
support/src/: config.rs  lib.rs  math.rs  robo_controller.rs  rpc.rs
