[package]
name = "robo2"
version = "0.1.0"
authors = ["brad <bradleyhardy@live.com>"]
# build = "build.rs"

# [features]
# default = ["serde_codegen"]
# nightly = ["serde_macros"]

# [build-dependencies]
# serde_codegen = { version = "*", optional = true }
# syntex = "*"

[dependencies]
cgmath = "*"
serde = "*"
serde_json = "*"
serde_macros = { version = "0.7.10", optional = false }
schedule_recv = "*"
