[package]
name = "battlebots"
version = "0.1.0"
authors = ["brad <bradleyhardy@live.com>"]

[dependencies]
cgmath = "0.10.0"
serde = "*"
serde_json = "*"
schedule_recv = "*"
glium = "*"
rand = "*"
crossbeam = "*"
render_utils = { version = "*", path = "render_utils" }
battlebots_support = { version = "*", path = "support" }
